# Language-converter

./: README.md  main.py  pyproject.toml  transliteral.py
api/: router.py  services.py
base/: base_converter.py  transcript_data.py  transcriptors.py  translaters.py
base/utilities/: custom_exceptions.py  transcript_data.py
georgian_en_ru/: converter.py  services.py
